Fixing bug in dark mode

--- a/src/components/dark-mode/style.scss
+++ b/src/components/dark-mode/style.scss
@@ -58,6 +58,12 @@ $gray-800: #3a3f44;
 	input {
 		color: $dark !important;
 	}
+	.react-datepicker__header {
+		background-color: $dark !important;
+	}
+	.react-datepicker__month-container {
+		background-color: $gray-800;
+	}
 }
 
 [data-theme='dark'] {
